using the 'unsafe_textures' feature to be able to store textures like a normal human

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ argparse = "0.2.2"
 [dependencies.sdl2]
 version = "0.35"
 default-features = false
-features = ["ttf"]
+features = ["ttf", "unsafe_textures"]
